fix on screen keyboard overlapping html (#84)
* fix on screen keyboard overlapping html

* refactor handleKeyboard()

--- a/src/main/resources/static/new.css
+++ b/src/main/resources/static/new.css
@@ -18,7 +18,7 @@ body {
 .app {
     margin: 0 auto;
     max-width: 28rem;
-    min-height: 28rem;
+    min-height: 20rem;
     height: 99.98vh; /* older browsers */
     height: 99.98dvh;
     display: flex;
